[gd_scene load_steps=5 format=3 uid="uid://7d42mtr1yrlh"]

[ext_resource type="Script" path="res://segments/tavern/scripts/dialogue_window.gd" id="1_k20x1"]
[ext_resource type="FontFile" uid="uid://wqnbusl6nw4f" path="res://ressources/fonts/Roboto-Black.ttf" id="2_yv83r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68yr7"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i358c"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[node name="DialogueWindow" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 123.0
offset_top = 436.0
offset_right = 1010.0
offset_bottom = 595.0
script = ExtResource("1_k20x1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NamePanel" type="Panel" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_68yr7")

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer/NamePanel"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 25
text = "Richard"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamePanel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_i358c")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/NamePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextLabel" type="Label" parent="VBoxContainer/NamePanel/MarginContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yv83r")
theme_override_font_sizes/font_size = 20
text = "Just wanted to say \"hi\" to you!"
autowrap_mode = 3
clip_text = true
